--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
   { include = "data", from = "src" },
   { include = "infra", from = "src" },
   { include = "portfolio", from = "src" },
+  { include = "risk", from = "src" },
 ]
 
 [tool.poetry.dependencies]
@@ -32,6 +33,8 @@ apscheduler = ">=3.10.4"
 prometheus-client = ">=0.20.0"
 streamlit = ">=1.39.0"
 typer = ">=0.12.5"
+python-json-logger = ">=2.0.7"
+holidays = ">=0.59"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.3.2"
