--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ apscheduler>=3.10.4
 prometheus-client>=0.20.0
 streamlit>=1.39.0
 typer>=0.12.5
+python-json-logger>=2.0.7
+holidays>=0.59
 
 # Testing & dev experience
 pytest>=8.3.2
